# mslies

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  schema.prisma
.github/workflows/: main.yml
app/: api.py  auth.py  config.py  database.py  main.py  schemas.py
app/api/: __init__.py  auth_api.py
app/services/: auth_service.py  email_service.py  parser.py  rag.py
scratch/: check_local_prisma.py  check_prisma.py  list_models.py
